# opencode-tokens

./: Cargo.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  tracker.rs
src/commands/: discover.rs  gain.rs  init.rs  mod.rs  proxy.rs
src/filters/: docker.rs  error.rs  file.rs  generic.rs  gh.rs  git.rs  log.rs  mod.rs  search.rs  summary.rs  test.rs
tests/: filters_test.rs  unit_test.rs
